fix home page news out of alignment, add logo to home page

--- a/src/containers/home/news-section/style.css
+++ b/src/containers/home/news-section/style.css
@@ -11,7 +11,7 @@
 }
 .home__container .news__item {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   height: 26px;
   line-height: 26px;
   font-size: 18px;
